# factorio-simulator

./: .gitignore  Cargo.toml  README.md  flake.nix  old.lua  test.tl
examples/: any%.txt  ddm.txt  steelaxe%.txt  test.txt  test2.txt  x1000.txt
factorio-prototype/: Cargo.toml  prototype-api.json
factorio-prototype-api/: Cargo.toml
factorio-prototype-api/src/: lib.rs
factorio-prototype/src/: lib.rs
factorio-prototypes/: Cargo.toml  build.rs
factorio-prototypes/src/: lib.rs
src/: data.rs  main.rs  number.rs  old.rs  raw_data.rs  smart.rs
