[workspace]

[package]
name = "factorio-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
env_logger = "0.11.2"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = "1.0.113"
