[workspace]

[package]
name = "factorio-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
async-lock = "3.3.0"
env_logger = "0.11.2"
futures = "0.3.30"
itertools = "0.12.1"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = "1.0.113"
