[package]
name = "factorio-prototypes"
version = "0.1.0"
edition = "2021"

[build-dependencies]
factorio-prototype-api = { path = "../factorio-prototype-api" }
templing = "*"
heck = "*"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive_more = "*"
batbox-num = "*"
